# jjq

./: .gitignore  ABOUT.md  AGENTS.md  CHANGELOG.md  COPYING  Cargo.toml  Makefile  README.md  SPEC.md  flake.nix  install.sh  jjq  jjq-test  jjq.sh  make-demo-repo.sh  run-jjq-test-repo.sh  stress-test.prompt
.claude/skills/stress-test/: SKILL.md
.github/workflows/: release.yml
docs/: README.md  jj-transaction-model.md  jjq.1  jjq.1.txt  observations-2026-01-28-stress-test.md  specification.md  stress-test.prompt
docs/decisions/: 2026-01-28-auto-rebase-on-push.md
docs/plans/: 2026-01-27-jjq-specification.md  2026-01-28-conflict-checks-exit-codes-design.md  2026-01-28-conflict-checks-exit-codes-plan.md  2026-01-28-failure-retry-workflow-design.md  2026-01-28-remove-retry-idempotent-push-design.md  2026-01-29-logging-design.md  2026-01-29-rust-port-catchup-plan.md  2026-02-04-fs2-flock-locks.md  2026-02-04-init-wizard-design.md  2026-02-04-init-wizard-plan.md  2026-02-04-progress-output-design.md  2026-02-04-progress-output-plan.md  2026-02-04-quickstart-command-design.md  2026-02-04-release-workflow-design.md  2026-02-04-status-observability-design.md  2026-02-04-status-observability-plan.md  20260203-codex-post-stress-improvements.txt  20260203-stop-on-failure.md
docs/testing/: 2026-01-27-parallel-agent-testing.md
scripts/: tag-release
src/: commands.rs  config.rs  exit_codes.rs  jj.rs  lock.rs  main.rs  queue.rs  quickstart.txt  runlog.rs  runner.rs  tail.rs
tests/: .e2e.rs.pending-snap  e2e.rs
