[package]
name = "jjq-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jjq"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
regex = "1"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
assert_cmd = "2"
predicates = "3"
serde_json = "1"
